kubernetes/yamls/frontend/frontend-deployment.yml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: frontend
  namespace: web
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: eventyay/frontend:latest
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 15
          timeoutSeconds: 1
        ports:
        - containerPort: 80
          protocol: TCP
      restartPolicy: Always
