kubernetes/yamls/frontend/frontend-service.yml
kind: Service
apiVersion: v1
metadata:
  name: frontend
  namespace: web
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: frontend
