kubernetes/yamls/frontend/ingress-notls.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-web-notls
  namespace: web
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: nextgen.eventyay.com
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend-redirector
          servicePort: 8080
